Correciones en varias ventanas sobre el estandar y tambien internacionalización, funcionalidad en la ventana de ajuste, primer prototipo de jugabilidad

--- a/HiveGameClient/HiveGameWPFApp/Views/EditCredentialsView.xaml
+++ b/HiveGameClient/HiveGameWPFApp/Views/EditCredentialsView.xaml
@@ -62,34 +62,34 @@
                         <Border Width="70" Height="70" CornerRadius="70" BorderBrush="White" BorderThickness="2" Margin="5" x:Name="brd_BubbleOne">
                             <TextBox Width="40" Height="40" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"
                                  MaxLength="1" FontSize="30" Background="Transparent" Foreground="White" BorderThickness="0"
-                                 TextChanged="TextBox_TextChanged" GotFocus="TextBox_GotFocus" LostFocus="TextBox_LostFocus"/>
+                                 TextChanged="TextBox_TextChanged" GotFocus="TextBox_GotFocus" LostFocus="TextBox_LostFocus" IsReadOnlyCaretVisible="False" PreviewMouseDown="TextBox_PreviewMouseDown"/>
                         </Border>
                         <Border Width="70" Height="70" CornerRadius="70" BorderBrush="White" BorderThickness="2" Margin="5" x:Name="brd_BubbleTwo">
                             <TextBox Width="40" Height="40" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"
                                  MaxLength="1" FontSize="30" Background="Transparent" Foreground="White" BorderThickness="0"
-                                 TextChanged="TextBox_TextChanged" GotFocus="TextBox_GotFocus" LostFocus="TextBox_LostFocus"/>
+                                 TextChanged="TextBox_TextChanged" GotFocus="TextBox_GotFocus" LostFocus="TextBox_LostFocus" IsReadOnlyCaretVisible="False" PreviewMouseDown="TextBox_PreviewMouseDown"/>
                         </Border>
 
                         <Border Width="70" Height="70" CornerRadius="70" BorderBrush="White" BorderThickness="2" Margin="5" x:Name="brd_BubbleThree">
                             <TextBox Width="40" Height="40" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"
                                  MaxLength="1" FontSize="30" Background="Transparent" Foreground="White" BorderThickness="0"
-                                 TextChanged="TextBox_TextChanged" GotFocus="TextBox_GotFocus" LostFocus="TextBox_LostFocus"/>
+                                 TextChanged="TextBox_TextChanged" GotFocus="TextBox_GotFocus" LostFocus="TextBox_LostFocus" IsReadOnlyCaretVisible="False" PreviewMouseDown="TextBox_PreviewMouseDown"/>
                         </Border>
                         <Border Width="70" Height="70" CornerRadius="70" BorderBrush="White" BorderThickness="2" Margin="5" x:Name="brd_BubbleFour">
                             <TextBox Width="40" Height="40" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"
                                  MaxLength="1" FontSize="30" Background="Transparent" Foreground="White" BorderThickness="0"
-                                 TextChanged="TextBox_TextChanged" GotFocus="TextBox_GotFocus" LostFocus="TextBox_LostFocus"/>
+                                 TextChanged="TextBox_TextChanged" GotFocus="TextBox_GotFocus" LostFocus="TextBox_LostFocus" IsReadOnlyCaretVisible="False" PreviewMouseDown="TextBox_PreviewMouseDown"/>
                         </Border>
 
                         <Border Width="70" Height="70" CornerRadius="70" BorderBrush="White" BorderThickness="2" Margin="5" x:Name="brd_BubbleFive">
                             <TextBox Width="40" Height="40" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"
                                  MaxLength="1" FontSize="30" Background="Transparent" Foreground="White" BorderThickness="0"
-                                 TextChanged="TextBox_TextChanged" GotFocus="TextBox_GotFocus" LostFocus="TextBox_LostFocus"/>
+                                 TextChanged="TextBox_TextChanged" GotFocus="TextBox_GotFocus" LostFocus="TextBox_LostFocus" IsReadOnlyCaretVisible="False" PreviewMouseDown="TextBox_PreviewMouseDown"/>
                         </Border>
                         <Border Width="70" Height="70" CornerRadius="70" BorderBrush="White" BorderThickness="2" Margin="5" x:Name="brd_BubbleSix">
                             <TextBox Width="40" Height="40" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"
                                  MaxLength="1" FontSize="30" Background="Transparent" Foreground="White" BorderThickness="0"
-                                 TextChanged="TextBox_TextChanged" GotFocus="TextBox_GotFocus" LostFocus="TextBox_LostFocus"/>
+                                 TextChanged="TextBox_TextChanged" GotFocus="TextBox_GotFocus" LostFocus="TextBox_LostFocus" IsReadOnlyCaretVisible="False" PreviewMouseDown="TextBox_PreviewMouseDown"/>
                         </Border>
                     </StackPanel>
 
