--- a/HiveGameClient/HiveGameWPFApp/Views/GameBoardView.xaml
+++ b/HiveGameClient/HiveGameWPFApp/Views/GameBoardView.xaml
@@ -23,7 +23,7 @@
             </Grid>
 
             <DockPanel>
-                <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" HorizontalAlignment="Center">
+                <StackPanel x:Name="stckp_Player2" DockPanel.Dock="Top" Orientation="Horizontal" HorizontalAlignment="Center">
                     <Border Name ="brd_ImageProfile2" Width="92" Height="121"  BorderThickness="2"
                          HorizontalAlignment="Left" VerticalAlignment="Top">
                         <Grid>
@@ -32,11 +32,11 @@
                             </Viewbox>
                         </Grid>
                     </Border>
-                    <TextBlock Text="Jugador 2" FontSize="30" FontFamily="Impact"  Margin="40"/>
-                    <StackPanel x:Name="Player2Pieces" Orientation="Horizontal" Margin="10" Cursor="Hand"/>
+                    <TextBlock x:Name="txtbl_PlayerName2" Text="{x:Static p:Resources.txtbl_Player2}" FontSize="30" FontFamily="Impact"  Margin="40"/>
+                    <StackPanel x:Name="stckp_Player2pieces" Orientation="Horizontal" Margin="10" Cursor="Hand"/>
                 </StackPanel>
 
-                <StackPanel DockPanel.Dock="Bottom" Orientation="Horizontal" HorizontalAlignment="Center">
+                <StackPanel x:Name="stckp_Player1" DockPanel.Dock="Bottom" Orientation="Horizontal" HorizontalAlignment="Center">
                     <Border Name ="brd_ImageProfile1" Width="92" Height="121"  BorderThickness="2"
                         HorizontalAlignment="Left" VerticalAlignment="Top">
                         <Grid>
@@ -45,8 +45,8 @@
                             </Viewbox>
                         </Grid>
                     </Border>
-                    <TextBlock Text="Jugador 1" FontSize="30" FontFamily="Impact"  Margin="40"/>
-                    <StackPanel x:Name="Player1Pieces" Orientation="Horizontal" Margin="10" Cursor="Hand"/>
+                    <TextBlock x:Name="txtbl_PlayerName1" Text="{x:Static p:Resources.txtbl_Player1}" FontSize="30" FontFamily="Impact"  Margin="40"/>
+                    <StackPanel x:Name="stckp_Player1Pieces" Orientation="Horizontal" Margin="10" Cursor="Hand"/>
                 </StackPanel>
 
                 <Canvas x:Name="GameBoardGrid" Width="450" Height="450" HorizontalAlignment="Center" VerticalAlignment="Center"/>
