--- a/HiveGameClient/HiveGameWPFApp/Views/GameBoardView.xaml
+++ b/HiveGameClient/HiveGameWPFApp/Views/GameBoardView.xaml
@@ -26,7 +26,7 @@
             <TextBlock x:Name="txtbl_PlayerName" TextWrapping="Wrap" Text="{x:Static p:Resources.txtbl_Player1}" FontSize="30" FontFamily="Impact"  Margin="992,390,124,290"/>
 
             <DockPanel>
-                <StackPanel x:Name="stckp_Player2" DockPanel.Dock="Top" Orientation="Horizontal" HorizontalAlignment="Center">
+                <StackPanel x:Name="stckp_Player2" DockPanel.Dock="Top" Orientation="Horizontal" Width="305">
                     <Border x:Name ="brd_ImageProfile2" Width="92" Height="121"  BorderThickness="2"
                          HorizontalAlignment="Left" VerticalAlignment="Top">
                         <Grid>
@@ -36,7 +36,7 @@
                         </Grid>
                     </Border>
                     <TextBlock x:Name="txtbl_PlayerName2" Text="{x:Static p:Resources.txtbl_Player2}" FontSize="30" FontFamily="Impact"  Margin="40"/>
-                    <StackPanel x:Name="stckp_Player2pieces" Orientation="Horizontal" Margin="10" Cursor="Hand"/>
+                    <StackPanel x:Name="stckp_Player2Pieces" Orientation="Horizontal" Margin="10" Cursor="Hand"/>
                 </StackPanel>
 
                 <StackPanel x:Name="stckp_Player1" DockPanel.Dock="Bottom" Orientation="Horizontal" HorizontalAlignment="Center">
