Correciones del sonarqube

--- a/HiveGameClient/HiveGameWPFApp/Views/EditCredentialsView.xaml
+++ b/HiveGameClient/HiveGameWPFApp/Views/EditCredentialsView.xaml
@@ -129,6 +129,7 @@
                     <StackPanel x:Name="NewPasswordSection" VerticalAlignment="Top" HorizontalAlignment="Center"  Margin="0,141,0,0" Width="574">
                         <Label x:Name="lbl_EmailUpdate" Foreground="#FFC300" FontWeight="Bold" FontSize="25" Content="{x:Static p:Resources.globalLbl_Email}"/>
                         <TextBox x:Name="txt_Email"
+                             MaxLength="255"
                              Width="574"
                              Height="40"
                              HorizontalAlignment="Left"
