--- a/HiveGameClient/HiveGameWPFApp/Views/LobbyView.xaml
+++ b/HiveGameClient/HiveGameWPFApp/Views/LobbyView.xaml
@@ -182,7 +182,7 @@
                     </StackPanel>
 
                     <StackPanel Name="stckp_SearchFriends" Grid.Row="1" Orientation="Horizontal" Margin="0,10,0,10">
-                        <TextBox x:Name="txt_SearchFriend" Width="200" Height="30"
+                        <TextBox x:Name="txt_SearchFriend" Width="200" Height="30" MaxLength="50"
                                      Background="#1C1C1C" Foreground="White" 
                                      BorderBrush="#FFC300" BorderThickness="2"
                                      FontSize="16" VerticalContentAlignment="Center" />
