--- a/HiveGameClient/HiveGameWPFApp/Views/VerifyEmailAndUsername.xaml
+++ b/HiveGameClient/HiveGameWPFApp/Views/VerifyEmailAndUsername.xaml
@@ -24,6 +24,7 @@
                    Margin="296,245,0,0"
                    VerticalAlignment="Top" />
                 <TextBox x:Name="txtb_Username"
+                     MaxLength="50"
                      Width="348"
                      Height="40"
                      HorizontalAlignment="Center"
@@ -48,6 +49,7 @@
                    Margin="326,378,0,0"
                    VerticalAlignment="Top" />
                 <TextBox x:Name="txtb_Email"
+                     MaxLength="250"
                      Width="348"
                      Height="40"
                      HorizontalAlignment="Center"
