--- a/HiveGameClient/HiveGameWPFApp/Views/GameBoardView.xaml
+++ b/HiveGameClient/HiveGameWPFApp/Views/GameBoardView.xaml
@@ -18,7 +18,7 @@
             </Border>
             
             <Grid Panel.ZIndex="100">
-                <TextBlock x:Name="InfoMessage"
+                <TextBlock x:Name="txtBlock_InfoMessage"
                Text="Este es un mensaje de información"
                FontSize="20"
                FontFamily="Impact"
@@ -40,13 +40,13 @@
             </Grid>
 
 
-            <Grid x:Name="VictoryOverlay"
+            <Grid x:Name="grd_VictoryOverlay"
               Visibility="Collapsed"
               HorizontalAlignment="Stretch"
               VerticalAlignment="Stretch"
               Panel.ZIndex="100">
-                
-                <TextBlock x:Name="txt_VictoryMessage"
+
+                <TextBlock x:Name="txtBlock_VictoryMessage"
                Text="¡Victoria absoluta!"
                FontSize="25"
                FontFamily="Impact"
@@ -64,8 +64,8 @@
 
 
 
-            <TextBlock x:Name="txtbl_TurnOf" Foreground="Black" TextWrapping="Wrap" Text="{x:Static p:Resources.txtbl_TurnOf}" FontSize="40" FontFamily="Impact"  Margin="992,336,152,340" />
-            <TextBlock x:Name="txtbl_PlayerName" TextWrapping="Wrap" Text="{x:Static p:Resources.txtbl_Player1}" FontSize="30" FontFamily="Impact"  Margin="992,390,124,290"/>
+            <TextBlock x:Name="txtBlock_TurnOf" Foreground="Black" TextWrapping="Wrap" Text="{x:Static p:Resources.txtbl_TurnOf}" FontSize="40" FontFamily="Impact"  Margin="992,336,152,340" />
+            <TextBlock x:Name="txtBlock_PlayerName" TextWrapping="Wrap" Text="{x:Static p:Resources.txtbl_Player1}" FontSize="30" FontFamily="Impact"  Margin="992,390,124,290"/>
 
             <DockPanel>
                 <StackPanel x:Name="stckp_Player2" DockPanel.Dock="Top" Orientation="Horizontal" HorizontalAlignment="Center">
@@ -77,7 +77,7 @@
                             </Viewbox>
                         </Grid>
                     </Border>
-                    <TextBlock x:Name="txtbl_PlayerName2" Text="{x:Static p:Resources.txtbl_Player2}" FontSize="30" FontFamily="Impact"  Margin="40"/>
+                    <TextBlock x:Name="txtBlock_PlayerName2" Text="{x:Static p:Resources.txtbl_Player2}" FontSize="30" FontFamily="Impact"  Margin="40"/>
                     <StackPanel x:Name="stckp_Player2Pieces" Orientation="Horizontal" Margin="10" Cursor="Hand"/>
                 </StackPanel>
 
@@ -90,15 +90,15 @@
                             </Viewbox>
                         </Grid>
                     </Border>
-                    <TextBlock x:Name="txtbl_PlayerName1" Text="{x:Static p:Resources.txtbl_Player1}" FontSize="30" FontFamily="Impact"  Margin="40"/>
+                    <TextBlock x:Name="txtBlock_PlayerName1" Text="{x:Static p:Resources.txtbl_Player1}" FontSize="30" FontFamily="Impact"  Margin="40"/>
                     <StackPanel x:Name="stckp_Player1Pieces" Orientation="Horizontal" Margin="10" Cursor="Hand"/>
                 </StackPanel>
-                <Canvas x:Name="GameBoardGrid" Width="450" Height="450" HorizontalAlignment="Center" VerticalAlignment="Center" Cursor="Hand"/>
+                <Canvas x:Name="canva_GameBoardGrid" Width="450" Height="450" HorizontalAlignment="Center" VerticalAlignment="Center" Cursor="Hand"/>
             </DockPanel>
         </Grid>
     </DockPanel>
     <Page.Resources>
-        <Storyboard x:Key="VictoryAnimation">
+        <Storyboard x:Key="storyb_VictoryAnimation">
             <DoubleAnimation Storyboard.TargetName="txt_VictoryMessage"
                              Storyboard.TargetProperty="RenderTransform.ScaleX"
                              From="0.5" To="6"
@@ -116,7 +116,7 @@
             </DoubleAnimationUsingKeyFrames>
         </Storyboard>
 
-        <Storyboard x:Key="InfoMessageAnimation">
+        <Storyboard x:Key="storyb_InfoMessageAnimation">
             <DoubleAnimation Storyboard.TargetName="InfoMessage"
                          Storyboard.TargetProperty="Opacity"
                          From="0" To="1"
