Arreglo de bug al desconectarse un jugador del lobby o un guest

--- a/HiveGameClient/HiveGameWPFApp/Views/EditCredentialsView.xaml
+++ b/HiveGameClient/HiveGameWPFApp/Views/EditCredentialsView.xaml
@@ -50,7 +50,7 @@
                        VerticalAlignment="Top"
                        Margin="420,173,0,0"/>
 
-                    <Label x:Name="lbl_Email" Content="example@gmai.com"
+                    <Label x:Name="lbl_Email" Content="hive123@gmai.com"
                         Foreground="#FFC300"
                         FontStyle="Italic"
                         FontSize="20"
