--- a/HiveGameClient/HiveGameWPFApp/Views/GameBoardView.xaml
+++ b/HiveGameClient/HiveGameWPFApp/Views/GameBoardView.xaml
@@ -99,15 +99,15 @@
     </DockPanel>
     <Page.Resources>
         <Storyboard x:Key="storyb_VictoryAnimation">
-            <DoubleAnimation Storyboard.TargetName="txt_VictoryMessage"
+            <DoubleAnimation Storyboard.TargetName="txtBlock_VictoryMessage"
                              Storyboard.TargetProperty="RenderTransform.ScaleX"
                              From="0.5" To="6"
                              Duration="0:0:4" AutoReverse="False" />
-            <DoubleAnimation Storyboard.TargetName="txt_VictoryMessage"
+            <DoubleAnimation Storyboard.TargetName="txtBlock_VictoryMessage"
                              Storyboard.TargetProperty="RenderTransform.ScaleY"
                              From="0.5" To="6"
                              Duration="0:0:4" AutoReverse="False" />
-            <DoubleAnimationUsingKeyFrames Storyboard.TargetName="txt_VictoryMessage"
+            <DoubleAnimationUsingKeyFrames Storyboard.TargetName="txtBlock_VictoryMessage"
                                            Storyboard.TargetProperty="RenderTransform.ScaleY">
                 <EasingDoubleKeyFrame KeyTime="0:0:3" Value="5.2" />
                 <EasingDoubleKeyFrame KeyTime="0:0:3.5" Value="5" />
@@ -117,16 +117,16 @@
         </Storyboard>
 
         <Storyboard x:Key="storyb_InfoMessageAnimation">
-            <DoubleAnimation Storyboard.TargetName="InfoMessage"
+            <DoubleAnimation Storyboard.TargetName="txtBlock_InfoMessage"
                          Storyboard.TargetProperty="Opacity"
                          From="0" To="1"
                          Duration="0:0:0.5" />
-            <DoubleAnimation Storyboard.TargetName="InfoMessage"
+            <DoubleAnimation Storyboard.TargetName="txtBlock_InfoMessage"
                          Storyboard.TargetProperty="Opacity"
                          From="1" To="1"
                          BeginTime="0:0:4" 
                 Duration="0:0:0.5" />
-                <DoubleAnimation Storyboard.TargetName="InfoMessage"
+            <DoubleAnimation Storyboard.TargetName="txtBlock_InfoMessage"
                          Storyboard.TargetProperty="Opacity"
                          From="1" To="0"
                          BeginTime="0:0:3"
