--- a/HiveGameClient/HiveGameWPFApp/Views/LoginView.xaml
+++ b/HiveGameClient/HiveGameWPFApp/Views/LoginView.xaml
@@ -24,10 +24,10 @@
                        Margin="667,252,0,0" RenderTransformOrigin="0.5,0.5" Panel.ZIndex="1"/>
 
 
-                <Label x:Name="lbl_Username" Content="{x:Static p:Resources.globalLbl_UserName}"
+                <Label x:Name="lbl_Username" Content="Username"
                        Foreground="#FFC300" FontWeight="Bold" FontSize="25"
-                       HorizontalAlignment="Left" Margin="906,238,0,0"
-                       VerticalAlignment="Top" Height="44" Width="238"/>
+                       HorizontalAlignment="Left" Margin="954,238,0,0"
+                       VerticalAlignment="Top" Height="44" Width="134"/>
 
 
                 <TextBox x:Name="txtb_Username" Width="347" Height="40" MaxLength="49"
